made it SEO friendly and added media query

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <title>About me - Jessica Bravo</title>
     <meta
       name="description"
-      content="About Jessica Bravo, a Front-End developerd based in Europe"
+      content="About Jessica Bravo, a Front-End developerd based in Spain"
     />
   </head>
   <body>
